// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`accordion > renders accordion with auto-collapse true 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders accordion with large size 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion accordion--large"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders accordion with localized role description 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"Akkordeon"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;

exports[`accordion > renders default accordion 1`] = `
"[36m<DocumentFragment>[39m
  [36m<ul[39m
    [33maria-roledescription[39m=[32m"accordion"[39m
    [33mclass[39m=[32m"accordion"[39m
  [36m>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 1[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-chevron-down-16"[39m
                  [33mviewBox[39m=[32m"0 0 16 16"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 2[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
    [36m<li>[39m
      [36m<details[39m
        [33mclass[39m=[32m"details"[39m
      [36m>[39m
        [36m<summary[39m
          [33mclass[39m=[32m"details__summary"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__label"[39m
          [36m>[39m
            [0mItem 3[0m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"details__icon"[39m
            [33mhidden[39m=[32m""[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--16"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-chevron-down-16"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
        [36m</summary>[39m
        [36m<div[39m
          [33mclass[39m=[32m"details__content"[39m
        [36m>[39m
          [36m<p>[39m
            [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
          [36m</p>[39m
        [36m</div>[39m
      [36m</details>[39m
    [36m</li>[39m
  [36m</ul>[39m
[36m</DocumentFragment>[39m"
`;
